Fix alignment of mobile search bar
[#171752092]

--- a/src/components/layout/navigation/TopNavbar.less
+++ b/src/components/layout/navigation/TopNavbar.less
@@ -4,6 +4,6 @@
   }
 
   .searchbar {
-    line-height: 84px;
+    line-height: 63px;
   }
 }
